--- a/.github/workflows/weekly-crawler.yml
+++ b/.github/workflows/weekly-crawler.yml
@@ -16,27 +16,66 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.10'
           cache: 'pip'
+
+      - name: Check environment
+        run: |
+          echo "GitHub Actions runner information:"
+          uname -a
+          python --version
+          pip --version
+          echo "Directory structure:"
+          ls -la
+
+          # Check if N8N_WEBHOOK_URL is set (without revealing the actual URL)
+          if [ -n "$N8N_WEBHOOK_URL" ]; then
+            echo "N8N_WEBHOOK_URL is set"
+          else
+            echo "N8N_WEBHOOK_URL is not set"
+          fi
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip list
 
-      - name: Install Playwright browsers
+      - name: Install Playwright browsers and dependencies
         run: |
-          playwright install
+          # Install Playwright with all dependencies
+          python -m playwright install --with-deps
 
       - name: Run crawler
         run: |
           python crawler.py
           echo "Crawler execution completed"
+
+          # Check if output directory exists and contains files
+          if [ -d "ai_training_data" ]; then
+            echo "Output directory exists"
+            echo "Files in output directory:"
+            ls -la ai_training_data
+            echo "Number of files: $(find ai_training_data -type f | wc -l)"
+
+            # Check content of one JSON file (if any exist)
+            JSON_FILES=$(find ai_training_data -name "*.json" -type f | head -n 1)
+            if [ -n "$JSON_FILES" ]; then
+              echo "Sample JSON file content (first 20 lines):"
+              head -n 20 $JSON_FILES
+            else
+              echo "No JSON files found in output directory"
+              exit 1
+            fi
+          else
+            echo "Output directory does not exist"
+            exit 1
+          fi
 
       - name: Install requests package for webhook
         run: |
@@ -46,11 +85,18 @@ jobs:
         if: env.N8N_WEBHOOK_URL != ''
         run: |
           echo "Sending data to n8n webhook..."
-          python send_to_n8n.py ai_training_data
-          echo "Data sent to n8n webhook"
+          # Add -v flag for verbose output (but don't show the actual URL)
+          python -u send_to_n8n.py ai_training_data
+          WEBHOOK_STATUS=$?
+          if [ $WEBHOOK_STATUS -eq 0 ]; then
+            echo "Data successfully sent to n8n webhook"
+          else
+            echo "Failed to send data to n8n webhook (exit code: $WEBHOOK_STATUS)"
+            exit $WEBHOOK_STATUS
+          fi
 
       - name: Upload crawled data as artifact
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: crawled-data
           path: ai_training_data/
